--- a/style.css
+++ b/style.css
@@ -1,2 +1,4 @@
 @import url(index.css);
-@import url (general.css);
+@import url(general.css);
+@import url(productos.css);
+@import url("https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap");
